@startuml


class Tablero {
}

class Jugador {
}

Jugador o-- Tablero

class Maquina {
}

class Usuario{
}

Maquina --> Jugador
Usuario --> Jugador

class Barco {
}

Tablero o-- Barco

' Casillero=Coordenada=Celda
class Coordenada{
}

Tablero o-- Coordenada

Coordenada o-- Barco

class Juego{
}

Juego o-- Jugador

class Archivo{
}

Juego o-- Archivo

@enduml